add customer pose completion bar

--- a/app/_components/bottomMenu/bottomMenu.module.css
+++ b/app/_components/bottomMenu/bottomMenu.module.css
@@ -4,10 +4,10 @@
   /*text-decoration: underline;*/
 }
 .content_height {
-  height: 92%;
+  /*height: 88vh;*/
 }
 .bottom_height {
-  height: 8%;
+  height: 8vh;
 }
 .menu_box {
   /*height: 100%;
